# astra

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  DESIGN_GAPS.md  DESIGN_PHILOSOPHY.md  INSTRUCTIONS.md  NEXT_STEPS.md  OBSERVABILITY_WIP.md  README-test.md  README.md  USER_PREFERENCES.md  build.py  valgrind.supp
apps/uri_shortener/: CMakeLists.txt  UriShortenerApp.cpp  UriShortenerApp.h  main.cpp
apps/uri_shortener/application/use_cases/: DeleteLink.h  ResolveLink.h  ShortenLink.h
apps/uri_shortener/config/: CMakeLists.txt  ConfigMigrator.h  ProtoConfigLoader.h  default.json  uri_shortener.proto
apps/uri_shortener/config/include/: ProtoConfigLoader.h
apps/uri_shortener/config/tests/: proto_config_extended_test.cpp  proto_config_loader_test.cpp  proto_config_test.cpp
apps/uri_shortener/domain/entities/: ShortLink.h
apps/uri_shortener/domain/include/: DomainErrors.h  ExpirationPolicy.h  ICodeGenerator.h  ILinkRepository.h  OriginalUrl.h  ShortCode.h  ShortLink.h
apps/uri_shortener/domain/ports/: ICodeGenerator.h  ILinkRepository.h
apps/uri_shortener/domain/src/: ExpirationPolicy.cpp  OriginalUrl.cpp  ShortCode.cpp  ShortLink.cpp
apps/uri_shortener/domain/tests/: delete_link_test.cpp  domain_benchmark.cpp  resolve_link_test.cpp  shorten_link_test.cpp
apps/uri_shortener/domain/value_objects/: ExpirationPolicy.h  OriginalUrl.cpp  OriginalUrl.h  ShortCode.h
apps/uri_shortener/include/: ObservableMessageHandler.h  ObservableRequestHandler.h  UriShortenerMessageHandler.h  UriShortenerRequestHandler.h
apps/uri_shortener/infrastructure/observability/: ObservableLinkRepository.h
apps/uri_shortener/infrastructure/persistence/: InMemoryLinkRepository.h
apps/uri_shortener/service/include/: AppBuilder.h  DataServiceHandler.h  DataServiceMessages.h  DeleteLink.h  HttpDataServiceAdapter.h  IDataServiceAdapter.h  InMemoryLinkRepository.h  ObservableLinkRepository.h  ObservableMessageHandler.h  ObservableRequestHandler.h  RandomCodeGenerator.h  ResolveLink.h  ShortenLink.h  UriMessages.h  UriShortenerApp.h  UriShortenerBuilder.h  UriShortenerComponents.h  UriShortenerMessageHandler.h  UriShortenerRequestHandler.h
apps/uri_shortener/service/src/: AppBuilder.cpp  DataServiceHandler.cpp  DeleteLink.cpp  HttpDataServiceAdapter.cpp  ObservableMessageHandler.cpp  ObservableRequestHandler.cpp  ResolveLink.cpp  ShortenLink.cpp  UriShortenerApp.cpp  UriShortenerBuilder.cpp  UriShortenerComponents.cpp  UriShortenerMessageHandler.cpp  UriShortenerRequestHandler.cpp
apps/uri_shortener/service/tests/: data_service_handler_test.cpp  http_data_service_adapter_test.cpp  observable_handler_test.cpp  service_benchmark.cpp
apps/uri_shortener/src/: ObservableMessageHandler.cpp  UriShortenerMessageHandler.cpp
apps/uri_shortener/tests/: CMakeLists.txt  app_builder_test.cpp  app_test.cpp  config_migrator_test.cpp  delete_link_test.cpp  expiration_policy_test.cpp  observable_handler_test.cpp  observable_repository_test.cpp  original_url_test.cpp  proto_config_extended_test.cpp  proto_config_loader_test.cpp  proto_config_test.cpp  resolve_link_test.cpp  short_code_test.cpp  short_link_test.cpp  shorten_link_test.cpp  test_resolve_link.cpp  test_shorten_link.cpp  uri_shortener_handlers_test.cpp
http1.1/server/: CMakeLists.txt
http1.1/server/include/: Http1Request.hpp  Http1Response.hpp  Http1Server.hpp
http1.1/server/src/: Http1Request.cpp  Http1Server.cpp
http1.1/server/tests/: http1_server_gtest.cpp  test_http1.1server_unit.cpp
http2server/: CMakeLists.txt  README.md
http2server/examples/: simple_server.cpp
http2server/include/http2server/: request.hpp  response.hpp
http2server/nghttp2/: CMakeLists.txt
http2server/src/: request.cpp  request_impl.hpp  response.cpp  response_impl.hpp  server.cpp
http2server/src/backend/nghttp2/: server_impl.cpp  server_impl.hpp
http2server/tests/: test_http2server_unit.cpp
httpserver/: CMakeLists.txt  README.md
httpserver/include/: HttpServerFactory.h  IHttpServer.h  IRequest.h  IResponse.h  IRouter.h  Validator.h
httpserver/nghttp2/: CMakeLists.txt  patch_nghttp2_asio.sh
httpserver/nghttp2/patches/: asio_server.cc
httpserver/src/: HttpServerFactory.cpp  Validator.cpp
httpserver/src/mock/: MockHttpServer.h
httpserver/src/nghttp2/: NgHttp2Request.h  NgHttp2Response.h  NgHttp2Router.h  NgHttp2Server.h
httpserver/tests/: test_http2_server.cpp
libs/core/config/: CMakeLists.txt
libs/core/config/include/: ConfigProvider.h
libs/core/config/src/: ConfigProvider.cpp
libs/core/config/tests/: CMakeLists.txt  config_structs_test.cpp  file_config_source_test.cpp
libs/core/execution/: CMakeLists.txt
libs/core/execution/include/: Executors.h  IExecutor.h  IMessageHandler.h  IQueue.h  IScopedResource.h  ISharedQueue.h  IThreadPool.h  Job.h  Message.h  ObservableMessagePool.h  SharedQueue.h  StickyQueue.h  StripedMessagePool.h  StripedThreadPool.h  ThreadPool.h
libs/core/execution/src/: ObservableMessagePool.cpp  SharedQueue.cpp  StickyQueue.cpp  StripedMessagePool.cpp  StripedThreadPool.cpp  ThreadPool.cpp
libs/core/execution/tests/: CMakeLists.txt  execution_benchmark.cpp  executor_test.cpp  job_context_test.cpp  observable_message_pool_test.cpp  shared_queue_test.cpp  sticky_queue_test.cpp  striped_message_pool_test.cpp  striped_thread_pool_test.cpp  thread_pool_test.cpp
libs/core/json/: CMakeLists.txt
libs/core/json/include/: JsonDocument.h  JsonWriter.h
libs/core/observability/: CMakeLists.txt
libs/core/outcome/: CMakeLists.txt
mongoclient/: CMakeLists.txt  IMongoClient.h  MongoClient.cpp  MongoClient.h  README.md  main.cpp
mongoclient/mongodriver/: CMakeLists.txt
mongoclient/tests/: test_mongoclient.cpp
uri_shortner/: CMakeLists.txt  load_test.cpp  main.cpp  mock_server.cpp
uri_shortner/include/: IUriService.hpp  MongoUriRepository.hpp  RedisUriRepository.hpp  UriController.hpp  UriService.hpp
uri_shortner/src/: MongoUriRepository.cpp  RedisUriRepository.cpp  UriController.cpp  UriService.cpp
uri_shortner/tests/: test_uri_shortener.cpp  uri_shortener_gtest.cpp
(+308 files in other folders)
