add_executable(test_shared_queue shared_queue_test.cpp)
target_link_libraries(test_shared_queue PRIVATE astra_execution GTest::gtest_main)

add_executable(test_executor executor_test.cpp)
target_link_libraries(test_executor PRIVATE astra_execution GTest::gtest_main)

add_executable(sticky_queue_test sticky_queue_test.cpp)
target_link_libraries(sticky_queue_test PRIVATE astra_execution GTest::gtest_main)

add_executable(observable_message_pool_test observable_message_pool_test.cpp)
target_link_libraries(observable_message_pool_test PRIVATE astra_execution GTest::gtest_main)

include(GoogleTest)
gtest_discover_tests(test_shared_queue)
gtest_discover_tests(test_executor)
gtest_discover_tests(sticky_queue_test)
gtest_discover_tests(observable_message_pool_test)
